# fishka-backend

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstylerc  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: check and deploy.yml  python checks.yml
apps/categories/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
apps/categories/fixtures/: categories.json
apps/categories/migrations/: 0001_initial.py  0002_auto_20210306_1042.py
apps/categories/tests/: test_models.py  test_views.py
apps/core/: models.py  serializers.py  urls.py  views.py
apps/core/fixtures/: user.json
apps/core/tests/: utils.py
apps/questions/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
apps/questions/fixtures/: questions.json
apps/questions/migrations/: 0001_initial.py  0002_auto_20201031_1922.py  0003_auto_20210306_1042.py
apps/questions/tests/: test_views.py
docker/: default.conf  entrypoint.sh
fishka_backend/: asgi.py  settings.py  urls.py  wsgi.py
